# webnovel-writing

./: .gitignore  README-启动说明.txt  README.md  Start-Webnovel-Writer.bat  pytest.ini
tools/: Build-Webnovel-Exe.bat  (+10 more)
webnovel-writer/webnovel-writer/: .env.example  .gitignore  README.md  chapter_paths.py  conftest.py  project_locator.py  pyproject.toml  runtime_compat.py  security_utils.py
webnovel-writer/webnovel-writer/.claude-plugin/: plugin.json
webnovel-writer/webnovel-writer/agents/: consistency-checker.md  context-agent.md  continuity-checker.md  data-agent.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md
webnovel-writer/webnovel-writer/dashboard/: app.py  codex_runner.py  llm_runner.py  orchestrator.py  query_service.py  requirements.txt  server.py  task_models.py  task_store.py  verification_console.py  watcher.py
webnovel-writer/webnovel-writer/dashboard/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
webnovel-writer/webnovel-writer/dashboard/tests/: test_app.py  test_chapter_director.py  test_codex_runner.py  test_dashboard_smoke_contract.py  test_director_alignment.py  test_director_placeholder_recovery.py  test_guarded_batch_runner.py  test_guarded_runner.py  test_orchestrator.py  test_orchestrator_narrative_state.py  test_orchestrator_repairs.py  test_query_service.py  test_regression_contracts.py  test_review_gate_messages.py  test_story_director.py  test_supervisor_audit_schema_contract.py  test_supervisor_recommendations.py  test_supervisor_smoke_fixture.py  test_task_store.py  test_write_director_workflow.py
webnovel-writer/webnovel-writer/docs/: supervisor-audit-maintenance.md  write-mainline-next-phase.md
webnovel-writer/webnovel-writer/references/: checker-output-schema.md  claude-code-call-matrix.md  context-contract-v2.md  entity-management-spec.md  genre-profiles.md  preferences-schema.md  project-memory-schema.md  reading-power-taxonomy.md
webnovel-writer/webnovel-writer/references/shared/: cool-points-guide.md  core-constraints.md  strand-weave-pattern.md
webnovel-writer/webnovel-writer/scripts/: __init__.py  archive_manager.py  backup_manager.py  extract_chapter_context.py  init_project.py  project_locator.py  quality_trend_report.py  requirements.txt  run_tests.ps1  security_utils.py  status_reporter.py  supervisor_audit.py  supervisor_smoke_fixture.py  update_state.py  webnovel.py  workflow_manager.py
webnovel-writer/webnovel-writer/scripts/data_modules/: __init__.py  api_client.py  config.py  context_manager.py  index_chapter_mixin.py  index_debt_mixin.py  index_entity_mixin.py  index_manager.py  index_observability_mixin.py  index_reading_mixin.py  migrate_state_to_sqlite.py  narrative_graph.py  narrative_models.py  rag_adapter.py  retry_utils.py  sql_state_manager.py  state_file.py  state_manager.py  story_plan_locator.py  style_sampler.py  webnovel.py
webnovel-writer/webnovel-writer/skills/webnovel-dashboard/: SKILL.md
webnovel-writer/webnovel-writer/skills/webnovel-init/: SKILL.md
webnovel-writer/webnovel-writer/workflow_specs/: guarded-batch-write.json  guarded-write.json  init.json  plan.json  repair.json  resume.json  review.json  write.json
(+200 files in other folders)
