[project]
name = "webnovel-writer"
version = "5.5.0"
description = "AI-powered web novel writing assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Webnovel Writer Team"}
]
keywords = ["webnovel", "writing", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "filelock>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]
dashboard = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<0.35.0",
    "watchdog>=5.0.0,<7.0.0",
]

[project.scripts]
webnovel = "scripts.data_modules.webnovel:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["runtime_compat", "project_locator", "security_utils", "chapter_paths"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "dashboard*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["scripts/data_modules/tests", "dashboard/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
timeout = 60

[tool.coverage.run]
source = ["scripts", "dashboard"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/cli_*.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
]

[tool.ruff.isort]
known-first-party = ["scripts", "dashboard"]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]
